fixed for CHLK-2903 [54 752] Attendance Summary - Heading, Course Alignment and White Space Issue

--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -1094,14 +1094,21 @@ BODY {
   }
 
   .chart-top-legend {
-    text-align: right;
-    float: right;
-    width: 500px;
-    margin-top: -26px;
+    text-align: left;
+    margin: 10px 0 0 0;
 
     .legend-item {
       margin-right: 13px;
       margin-bottom: 0;
+      width: 190px;
+      text-align: left;
+
+      .name{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 170px;
+        white-space: nowrap;
+      }
     }
   }
 
